bugfix: table action menu z-index increased

--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -35,6 +35,7 @@ td a:hover {
   background: #fff;
   box-shadow: 0 2px 4px 0 #9b9b9b;
   border-radius: 5px;
+  z-index: 2;
   a {
     cursor: pointer;
     display: block;
